--- a/app/src/main/res/layout/fragment_name_page.xml
+++ b/app/src/main/res/layout/fragment_name_page.xml
@@ -9,21 +9,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter Your Name"
-        android:gravity="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30dp"
-        android:layout_marginLeft="70dp"
-        android:id="@+id/textView" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:id="@+id/edit_text"
-        />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:gravity="center"
+            android:text="Enter Your Name"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="30dp" />
+
+        <EditText
+            android:id="@+id/edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView" />
+
         <Button
             android:id="@+id/btn"
             android:layout_width="wrap_content"
